Fixed Section Spacing Issue

--- a/portfolio/static/portfolio/css/about-me.css
+++ b/portfolio/static/portfolio/css/about-me.css
@@ -53,10 +53,11 @@ b {
 .container {
     display: flex;
     width: 100%;
-    height: 80vh;  
+    height: auto;  
     justify-content: center;
     align-items: center;
     margin-top: 78px;
+    padding-top: 5%;
 }
 
 /* Left section taking 2/3 of the width */
@@ -119,4 +120,10 @@ b {
         font-size: 1.1rem;
     }
 
+}
+
+@media(max-height: 700px) {
+   section {
+    height: 90vw;
+   }
 }
